[package]
name = "testing-examples"
version = "0.1.0"
authors = ["John Disanti <jdisanti@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-smithy-client = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["test-util"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[[bin]]
name = "intro"
path = "src/intro.rs"
